// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QuestionField > renders a audio media question field 1`] = `
<div>
  <div
    class="stack vertical spacing-compact align-stretch justify-start layoutFull"
  >
    <div
      class="stack vertical spacing-compact align-stretch justify-start width-full"
    >
      <div
        class="mediaQuestionField"
      >
        <div
          class="previewWrapper"
        >
          <div
            class="preview"
          >
            <div
              class="playerWrapper"
            >
              <div
                data-testid="mock-player"
              >
                Mock Player
              </div>
            </div>
          </div>
          <div
            class="actions"
          >
            <div
              class="buttonContainer variantPrimary surfaceBrand intentDanger sizeSmall"
            >
              <button
                data-testid="test-delete-media-button-button"
                id="delete-media-button"
                name="delete-media-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-trash icon"
                  data-icon="trash"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 448 512"
                >
                  <path
                    d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Delete
                </span>
              </button>
            </div>
            <div
              class="buttonContainer variantPrimary surfaceBrand intentAccent sizeSmall"
            >
              <button
                data-testid="test-replace-media-button-button"
                id="replace-media-button"
                name="replace-media-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-retweet icon"
                  data-icon="retweet"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 576 512"
                >
                  <path
                    d="M118.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-64 64c-9.2 9.2-11.9 22.9-6.9 34.9S19.1 160 32 160l32 0 0 224c0 53 43 96 96 96l128 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-128 0c-17.7 0-32-14.3-32-32l0-224 32 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-64-64zM457.4 470.6c12.5 12.5 32.8 12.5 45.3 0l64-64c9.2-9.2 11.9-22.9 6.9-34.9S556.9 352 544 352l-32 0 0-224c0-53-43-96-96-96L288 32c-17.7 0-32 14.3-32 32s14.3 32 32 32l128 0c17.7 0 32 14.3 32 32l0 224-32 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l64 64z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Replace
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a duration question field 1`] = `
<div>
  <div
    class="stack vertical spacing-compact align-stretch justify-start layoutFull"
  >
    <div
      class="stack horizontal spacing-compact align-center justify-start label"
    >
      <span>
        Time limit
      </span>
      <button
        class="iconTooltipButton"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info"
          data-icon="circle-info"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="stack vertical spacing-compact align-stretch justify-start width-full"
    >
      <div
        class="inputContainer"
      >
        <div
          class="selectInputContainer surfaceBrand"
        >
          <select
            data-testid="test-duration-select-select"
            id="duration-select"
            name="duration-select"
          >
            <option
              value="5"
            >
              5 seconds
            </option>
            <option
              value="10"
            >
              10 seconds
            </option>
            <option
              value="20"
            >
              20 seconds
            </option>
            <option
              value="30"
            >
              30 seconds
            </option>
            <option
              value="45"
            >
              45 seconds
            </option>
            <option
              value="60"
            >
              1 minute
            </option>
            <option
              value="90"
            >
              1 minute 30 seconds
            </option>
            <option
              value="120"
            >
              2 minutes
            </option>
            <option
              value="180"
            >
              3 minutes
            </option>
            <option
              value="240"
            >
              4 minutes
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            data-icon="chevron-down"
            data-prefix="fas"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a image media question field 1`] = `
<div>
  <div
    class="stack vertical spacing-compact align-stretch justify-start layoutFull"
  >
    <div
      class="stack vertical spacing-compact align-stretch justify-start width-full"
    >
      <div
        class="mediaQuestionField"
      >
        <div
          class="previewWrapper"
        >
          <div
            class="preview"
          >
            <div
              class="container fallbackAspectRatio"
            >
              <div
                class="centerOverlay box"
                style="width: 100%; aspect-ratio: 1.6 / 1;"
              >
                <div
                  class="loadingSpinnerContainer"
                  data-testid="loading-spinner"
                >
                  <div />
                  <div />
                  <div />
                </div>
              </div>
            </div>
          </div>
          <div
            class="actions"
          >
            <div
              class="buttonContainer variantPrimary surfaceBrand intentDanger sizeSmall"
            >
              <button
                data-testid="test-delete-media-button-button"
                id="delete-media-button"
                name="delete-media-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-trash icon"
                  data-icon="trash"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 448 512"
                >
                  <path
                    d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Delete
                </span>
              </button>
            </div>
            <div
              class="buttonContainer variantPrimary surfaceBrand intentAccent sizeSmall"
            >
              <button
                data-testid="test-replace-media-button-button"
                id="replace-media-button"
                name="replace-media-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-retweet icon"
                  data-icon="retweet"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 576 512"
                >
                  <path
                    d="M118.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-64 64c-9.2 9.2-11.9 22.9-6.9 34.9S19.1 160 32 160l32 0 0 224c0 53 43 96 96 96l128 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-128 0c-17.7 0-32-14.3-32-32l0-224 32 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-64-64zM457.4 470.6c12.5 12.5 32.8 12.5 45.3 0l64-64c9.2-9.2 11.9-22.9 6.9-34.9S556.9 352 544 352l-32 0 0-224c0-53-43-96-96-96L288 32c-17.7 0-32 14.3-32 32s14.3 32 32 32l128 0c17.7 0 32 14.3 32 32l0 224-32 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l64 64z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Replace
                </span>
              </button>
            </div>
            <div
              class="buttonContainer variantPrimary surfaceBrand intentDefault sizeSmall"
            >
              <button
                data-testid="test-add-image-effect-button-button"
                id="add-image-effect-button"
                name="add-image-effect-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-wand-magic-sparkles icon"
                  data-icon="wand-magic-sparkles"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 576 512"
                >
                  <path
                    d="M263.4-27L278.2 9.8 315 24.6c3 1.2 5 4.2 5 7.4s-2 6.2-5 7.4L278.2 54.2 263.4 91c-1.2 3-4.2 5-7.4 5s-6.2-2-7.4-5L233.8 54.2 197 39.4c-3-1.2-5-4.2-5-7.4s2-6.2 5-7.4L233.8 9.8 248.6-27c1.2-3 4.2-5 7.4-5s6.2 2 7.4 5zM110.7 41.7l21.5 50.1 50.1 21.5c5.9 2.5 9.7 8.3 9.7 14.7s-3.8 12.2-9.7 14.7l-50.1 21.5-21.5 50.1c-2.5 5.9-8.3 9.7-14.7 9.7s-12.2-3.8-14.7-9.7L59.8 164.2 9.7 142.7C3.8 140.2 0 134.4 0 128s3.8-12.2 9.7-14.7L59.8 91.8 81.3 41.7C83.8 35.8 89.6 32 96 32s12.2 3.8 14.7 9.7zM464 304c6.4 0 12.2 3.8 14.7 9.7l21.5 50.1 50.1 21.5c5.9 2.5 9.7 8.3 9.7 14.7s-3.8 12.2-9.7 14.7l-50.1 21.5-21.5 50.1c-2.5 5.9-8.3 9.7-14.7 9.7s-12.2-3.8-14.7-9.7l-21.5-50.1-50.1-21.5c-5.9-2.5-9.7-8.3-9.7-14.7s3.8-12.2 9.7-14.7l50.1-21.5 21.5-50.1c2.5-5.9 8.3-9.7 14.7-9.7zM460 0c11 0 21.6 4.4 29.5 12.2l42.3 42.3C539.6 62.4 544 73 544 84s-4.4 21.6-12.2 29.5l-88.2 88.2-101.3-101.3 88.2-88.2C438.4 4.4 449 0 460 0zM44.2 398.5L308.4 134.3 409.7 235.6 145.5 499.8C137.6 507.6 127 512 116 512s-21.6-4.4-29.5-12.2L44.2 457.5C36.4 449.6 32 439 32 428s4.4-21.6 12.2-29.5z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Image Effect
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a multiple choice type question field 1`] = `
<div>
  <div
    class="stack vertical spacing-compact align-stretch justify-start layoutFull"
  >
    <div
      class="stack horizontal spacing-compact align-center justify-start label"
    >
      <span>
        Question type
      </span>
    </div>
    <div
      class="stack vertical spacing-compact align-stretch justify-start width-full"
    >
      <div
        class="inputContainer"
      >
        <div
          class="selectInputContainer surfaceBrand"
        >
          <select
            data-testid="test-question-type-select-select"
            id="question-type-select"
            name="question-type-select"
          >
            <option
              value="MULTI_CHOICE"
            >
              Multiple choice
            </option>
            <option
              value="RANGE"
            >
              Range
            </option>
            <option
              value="TRUE_FALSE"
            >
              True or false
            </option>
            <option
              value="TYPE_ANSWER"
            >
              Type answer
            </option>
            <option
              value="PIN"
            >
              Pin
            </option>
            <option
              value="PUZZLE"
            >
              Puzzle
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            data-icon="chevron-down"
            data-prefix="fas"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a points question field 1`] = `
<div>
  <div
    class="stack vertical spacing-compact align-stretch justify-start layoutFull"
  >
    <div
      class="stack horizontal spacing-compact align-center justify-start label"
    >
      <span>
        Points
      </span>
      <button
        class="iconTooltipButton"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info"
          data-icon="circle-info"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="stack vertical spacing-compact align-stretch justify-start width-full"
    >
      <div
        class="inputContainer"
      >
        <div
          class="selectInputContainer surfaceBrand"
        >
          <select
            data-testid="test-points-select-select"
            id="points-select"
            name="points-select"
          >
            <option
              value="0"
            >
              Zero Points
            </option>
            <option
              value="1000"
            >
              Standard Points (1000)
            </option>
            <option
              value="2000"
            >
              Double Points (2000)
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            data-icon="chevron-down"
            data-prefix="fas"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a range correct question field 1`] = `
<div>
  <div
    class="stack vertical spacing-compact align-stretch justify-start layoutHalf"
  >
    <div
      class="stack horizontal spacing-compact align-center justify-start label"
    >
      <span>
        Correct answer
         *
      </span>
      <button
        class="iconTooltipButton"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info"
          data-icon="circle-info"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="stack vertical spacing-compact align-stretch justify-start width-full"
    >
      <div
        class="inputContainer grow"
      >
        <div
          class="textFieldInputContainer surfaceBrand"
        >
          <input
            class="textfield"
            data-testid="test-range-correct-textfield-textfield"
            id="range-correct-textfield"
            max="100"
            min="0"
            name="range-correct-textfield"
            placeholder=""
            type="number"
            value="50"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a range margin question field 1`] = `
<div>
  <div
    class="stack vertical spacing-compact align-stretch justify-start layoutHalf"
  >
    <div
      class="stack horizontal spacing-compact align-center justify-start label"
    >
      <span>
        Accepted margin
      </span>
      <button
        class="iconTooltipButton"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info"
          data-icon="circle-info"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="stack vertical spacing-compact align-stretch justify-start width-full"
    >
      <div
        class="inputContainer grow"
      >
        <div
          class="selectInputContainer surfaceBrand"
        >
          <select
            data-testid="test-range-margin-select-select"
            id="range-margin-select"
            name="range-margin-select"
          >
            <option
              value="NONE"
            >
              None
            </option>
            <option
              value="LOW"
            >
              Low
            </option>
            <option
              value="MEDIUM"
            >
              Medium
            </option>
            <option
              value="HIGH"
            >
              High
            </option>
            <option
              value="MAXIMUM"
            >
              Maximum
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            data-icon="chevron-down"
            data-prefix="fas"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a range max question field 1`] = `
<div>
  <div
    class="stack vertical spacing-compact align-stretch justify-start layoutHalf"
  >
    <div
      class="stack horizontal spacing-compact align-center justify-start label"
    >
      <span>
        Maximum value
      </span>
      <button
        class="iconTooltipButton"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info"
          data-icon="circle-info"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="stack vertical spacing-compact align-stretch justify-start width-full"
    >
      <div
        class="inputContainer grow"
      >
        <div
          class="textFieldInputContainer surfaceBrand"
        >
          <input
            class="textfield"
            data-testid="test-range-max-textfield-textfield"
            id="range-max-textfield"
            name="range-max-textfield"
            placeholder="Maximum"
            type="number"
            value="100"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a range min question field 1`] = `
<div>
  <div
    class="stack vertical spacing-compact align-stretch justify-start layoutHalf"
  >
    <div
      class="stack horizontal spacing-compact align-center justify-start label"
    >
      <span>
        Minimum value
      </span>
      <button
        class="iconTooltipButton"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info"
          data-icon="circle-info"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="stack vertical spacing-compact align-stretch justify-start width-full"
    >
      <div
        class="inputContainer grow"
      >
        <div
          class="textFieldInputContainer surfaceBrand"
        >
          <input
            class="textfield"
            data-testid="test-range-min-textfield-textfield"
            id="range-min-textfield"
            name="range-min-textfield"
            placeholder="Minimum"
            type="number"
            value="0"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a range type question field 1`] = `
<div>
  <div
    class="stack vertical spacing-compact align-stretch justify-start layoutFull"
  >
    <div
      class="stack horizontal spacing-compact align-center justify-start label"
    >
      <span>
        Question type
      </span>
    </div>
    <div
      class="stack vertical spacing-compact align-stretch justify-start width-full"
    >
      <div
        class="inputContainer"
      >
        <div
          class="selectInputContainer surfaceBrand"
        >
          <select
            data-testid="test-question-type-select-select"
            id="question-type-select"
            name="question-type-select"
          >
            <option
              value="MULTI_CHOICE"
            >
              Multiple choice
            </option>
            <option
              value="RANGE"
            >
              Range
            </option>
            <option
              value="TRUE_FALSE"
            >
              True or false
            </option>
            <option
              value="TYPE_ANSWER"
            >
              Type answer
            </option>
            <option
              value="PIN"
            >
              Pin
            </option>
            <option
              value="PUZZLE"
            >
              Puzzle
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            data-icon="chevron-down"
            data-prefix="fas"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a true or false question field 1`] = `
<div>
  <div
    class="stack vertical spacing-compact align-stretch justify-start layoutFull"
  >
    <div
      class="stack horizontal spacing-compact align-center justify-start label"
    >
      <span>
        Question type
      </span>
    </div>
    <div
      class="stack vertical spacing-compact align-stretch justify-start width-full"
    >
      <div
        class="inputContainer"
      >
        <div
          class="selectInputContainer surfaceBrand"
        >
          <select
            data-testid="test-question-type-select-select"
            id="question-type-select"
            name="question-type-select"
          >
            <option
              value="MULTI_CHOICE"
            >
              Multiple choice
            </option>
            <option
              value="RANGE"
            >
              Range
            </option>
            <option
              value="TRUE_FALSE"
            >
              True or false
            </option>
            <option
              value="TYPE_ANSWER"
            >
              Type answer
            </option>
            <option
              value="PIN"
            >
              Pin
            </option>
            <option
              value="PUZZLE"
            >
              Puzzle
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            data-icon="chevron-down"
            data-prefix="fas"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a type answer question field 1`] = `
<div>
  <div
    class="stack vertical spacing-compact align-stretch justify-start layoutFull"
  >
    <div
      class="stack horizontal spacing-compact align-center justify-start label"
    >
      <span>
        Question type
      </span>
    </div>
    <div
      class="stack vertical spacing-compact align-stretch justify-start width-full"
    >
      <div
        class="inputContainer"
      >
        <div
          class="selectInputContainer surfaceBrand"
        >
          <select
            data-testid="test-question-type-select-select"
            id="question-type-select"
            name="question-type-select"
          >
            <option
              value="MULTI_CHOICE"
            >
              Multiple choice
            </option>
            <option
              value="RANGE"
            >
              Range
            </option>
            <option
              value="TRUE_FALSE"
            >
              True or false
            </option>
            <option
              value="TYPE_ANSWER"
            >
              Type answer
            </option>
            <option
              value="PIN"
            >
              Pin
            </option>
            <option
              value="PUZZLE"
            >
              Puzzle
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            data-icon="chevron-down"
            data-prefix="fas"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a video media question field 1`] = `
<div>
  <div
    class="stack vertical spacing-compact align-stretch justify-start layoutFull"
  >
    <div
      class="stack vertical spacing-compact align-stretch justify-start width-full"
    >
      <div
        class="mediaQuestionField"
      >
        <div
          class="previewWrapper"
        >
          <div
            class="preview"
          >
            <div
              class="playerWrapper"
            >
              <div
                data-testid="mock-player"
              >
                Mock Player
              </div>
            </div>
          </div>
          <div
            class="actions"
          >
            <div
              class="buttonContainer variantPrimary surfaceBrand intentDanger sizeSmall"
            >
              <button
                data-testid="test-delete-media-button-button"
                id="delete-media-button"
                name="delete-media-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-trash icon"
                  data-icon="trash"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 448 512"
                >
                  <path
                    d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Delete
                </span>
              </button>
            </div>
            <div
              class="buttonContainer variantPrimary surfaceBrand intentAccent sizeSmall"
            >
              <button
                data-testid="test-replace-media-button-button"
                id="replace-media-button"
                name="replace-media-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-retweet icon"
                  data-icon="retweet"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 576 512"
                >
                  <path
                    d="M118.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-64 64c-9.2 9.2-11.9 22.9-6.9 34.9S19.1 160 32 160l32 0 0 224c0 53 43 96 96 96l128 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-128 0c-17.7 0-32-14.3-32-32l0-224 32 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-64-64zM457.4 470.6c12.5 12.5 32.8 12.5 45.3 0l64-64c9.2-9.2 11.9-22.9 6.9-34.9S556.9 352 544 352l-32 0 0-224c0-53-43-96-96-96L288 32c-17.7 0-32 14.3-32 32s14.3 32 32 32l128 0c17.7 0 32 14.3 32 32l0 224-32 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l64 64z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Replace
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders an image media question field with blur effect 1`] = `
<div>
  <div
    class="stack vertical spacing-compact align-stretch justify-start layoutFull"
  >
    <div
      class="stack vertical spacing-compact align-stretch justify-start width-full"
    >
      <div
        class="mediaQuestionField"
      >
        <div
          class="previewWrapper"
        >
          <div
            class="preview"
          >
            <div
              class="container fallbackAspectRatio"
            >
              <div
                class="centerOverlay box"
                style="width: 100%; aspect-ratio: 1.6 / 1;"
              >
                <div
                  class="loadingSpinnerContainer"
                  data-testid="loading-spinner"
                >
                  <div />
                  <div />
                  <div />
                </div>
              </div>
            </div>
          </div>
          <div
            class="actions"
          >
            <div
              class="buttonContainer variantPrimary surfaceBrand intentDanger sizeSmall"
            >
              <button
                data-testid="test-delete-media-button-button"
                id="delete-media-button"
                name="delete-media-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-trash icon"
                  data-icon="trash"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 448 512"
                >
                  <path
                    d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Delete
                </span>
              </button>
            </div>
            <div
              class="buttonContainer variantPrimary surfaceBrand intentAccent sizeSmall"
            >
              <button
                data-testid="test-replace-media-button-button"
                id="replace-media-button"
                name="replace-media-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-retweet icon"
                  data-icon="retweet"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 576 512"
                >
                  <path
                    d="M118.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-64 64c-9.2 9.2-11.9 22.9-6.9 34.9S19.1 160 32 160l32 0 0 224c0 53 43 96 96 96l128 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-128 0c-17.7 0-32-14.3-32-32l0-224 32 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-64-64zM457.4 470.6c12.5 12.5 32.8 12.5 45.3 0l64-64c9.2-9.2 11.9-22.9 6.9-34.9S556.9 352 544 352l-32 0 0-224c0-53-43-96-96-96L288 32c-17.7 0-32 14.3-32 32s14.3 32 32 32l128 0c17.7 0 32 14.3 32 32l0 224-32 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l64 64z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Replace
                </span>
              </button>
            </div>
            <div
              class="buttonContainer variantPrimary surfaceBrand intentDefault sizeSmall"
            >
              <button
                data-testid="test-add-image-effect-button-button"
                id="add-image-effect-button"
                name="add-image-effect-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-wand-magic-sparkles icon"
                  data-icon="wand-magic-sparkles"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 576 512"
                >
                  <path
                    d="M263.4-27L278.2 9.8 315 24.6c3 1.2 5 4.2 5 7.4s-2 6.2-5 7.4L278.2 54.2 263.4 91c-1.2 3-4.2 5-7.4 5s-6.2-2-7.4-5L233.8 54.2 197 39.4c-3-1.2-5-4.2-5-7.4s2-6.2 5-7.4L233.8 9.8 248.6-27c1.2-3 4.2-5 7.4-5s6.2 2 7.4 5zM110.7 41.7l21.5 50.1 50.1 21.5c5.9 2.5 9.7 8.3 9.7 14.7s-3.8 12.2-9.7 14.7l-50.1 21.5-21.5 50.1c-2.5 5.9-8.3 9.7-14.7 9.7s-12.2-3.8-14.7-9.7L59.8 164.2 9.7 142.7C3.8 140.2 0 134.4 0 128s3.8-12.2 9.7-14.7L59.8 91.8 81.3 41.7C83.8 35.8 89.6 32 96 32s12.2 3.8 14.7 9.7zM464 304c6.4 0 12.2 3.8 14.7 9.7l21.5 50.1 50.1 21.5c5.9 2.5 9.7 8.3 9.7 14.7s-3.8 12.2-9.7 14.7l-50.1 21.5-21.5 50.1c-2.5 5.9-8.3 9.7-14.7 9.7s-12.2-3.8-14.7-9.7l-21.5-50.1-50.1-21.5c-5.9-2.5-9.7-8.3-9.7-14.7s3.8-12.2 9.7-14.7l50.1-21.5 21.5-50.1c2.5-5.9 8.3-9.7 14.7-9.7zM460 0c11 0 21.6 4.4 29.5 12.2l42.3 42.3C539.6 62.4 544 73 544 84s-4.4 21.6-12.2 29.5l-88.2 88.2-101.3-101.3 88.2-88.2C438.4 4.4 449 0 460 0zM44.2 398.5L308.4 134.3 409.7 235.6 145.5 499.8C137.6 507.6 127 512 116 512s-21.6-4.4-29.5-12.2L44.2 457.5C36.4 449.6 32 439 32 428s4.4-21.6 12.2-29.5z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Image Effect
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders an image media question field with square effect 1`] = `
<div>
  <div
    class="stack vertical spacing-compact align-stretch justify-start layoutFull"
  >
    <div
      class="stack vertical spacing-compact align-stretch justify-start width-full"
    >
      <div
        class="mediaQuestionField"
      >
        <div
          class="previewWrapper"
        >
          <div
            class="preview"
          >
            <div
              class="container fallbackAspectRatio"
            >
              <div
                class="centerOverlay box"
                style="width: 100%; aspect-ratio: 1.6 / 1;"
              >
                <div
                  class="loadingSpinnerContainer"
                  data-testid="loading-spinner"
                >
                  <div />
                  <div />
                  <div />
                </div>
              </div>
            </div>
          </div>
          <div
            class="actions"
          >
            <div
              class="buttonContainer variantPrimary surfaceBrand intentDanger sizeSmall"
            >
              <button
                data-testid="test-delete-media-button-button"
                id="delete-media-button"
                name="delete-media-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-trash icon"
                  data-icon="trash"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 448 512"
                >
                  <path
                    d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Delete
                </span>
              </button>
            </div>
            <div
              class="buttonContainer variantPrimary surfaceBrand intentAccent sizeSmall"
            >
              <button
                data-testid="test-replace-media-button-button"
                id="replace-media-button"
                name="replace-media-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-retweet icon"
                  data-icon="retweet"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 576 512"
                >
                  <path
                    d="M118.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-64 64c-9.2 9.2-11.9 22.9-6.9 34.9S19.1 160 32 160l32 0 0 224c0 53 43 96 96 96l128 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-128 0c-17.7 0-32-14.3-32-32l0-224 32 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-64-64zM457.4 470.6c12.5 12.5 32.8 12.5 45.3 0l64-64c9.2-9.2 11.9-22.9 6.9-34.9S556.9 352 544 352l-32 0 0-224c0-53-43-96-96-96L288 32c-17.7 0-32 14.3-32 32s14.3 32 32 32l128 0c17.7 0 32 14.3 32 32l0 224-32 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l64 64z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Replace
                </span>
              </button>
            </div>
            <div
              class="buttonContainer variantPrimary surfaceBrand intentDefault sizeSmall"
            >
              <button
                data-testid="test-add-image-effect-button-button"
                id="add-image-effect-button"
                name="add-image-effect-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-wand-magic-sparkles icon"
                  data-icon="wand-magic-sparkles"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 576 512"
                >
                  <path
                    d="M263.4-27L278.2 9.8 315 24.6c3 1.2 5 4.2 5 7.4s-2 6.2-5 7.4L278.2 54.2 263.4 91c-1.2 3-4.2 5-7.4 5s-6.2-2-7.4-5L233.8 54.2 197 39.4c-3-1.2-5-4.2-5-7.4s2-6.2 5-7.4L233.8 9.8 248.6-27c1.2-3 4.2-5 7.4-5s6.2 2 7.4 5zM110.7 41.7l21.5 50.1 50.1 21.5c5.9 2.5 9.7 8.3 9.7 14.7s-3.8 12.2-9.7 14.7l-50.1 21.5-21.5 50.1c-2.5 5.9-8.3 9.7-14.7 9.7s-12.2-3.8-14.7-9.7L59.8 164.2 9.7 142.7C3.8 140.2 0 134.4 0 128s3.8-12.2 9.7-14.7L59.8 91.8 81.3 41.7C83.8 35.8 89.6 32 96 32s12.2 3.8 14.7 9.7zM464 304c6.4 0 12.2 3.8 14.7 9.7l21.5 50.1 50.1 21.5c5.9 2.5 9.7 8.3 9.7 14.7s-3.8 12.2-9.7 14.7l-50.1 21.5-21.5 50.1c-2.5 5.9-8.3 9.7-14.7 9.7s-12.2-3.8-14.7-9.7l-21.5-50.1-50.1-21.5c-5.9-2.5-9.7-8.3-9.7-14.7s3.8-12.2 9.7-14.7l50.1-21.5 21.5-50.1c2.5-5.9 8.3-9.7 14.7-9.7zM460 0c11 0 21.6 4.4 29.5 12.2l42.3 42.3C539.6 62.4 544 73 544 84s-4.4 21.6-12.2 29.5l-88.2 88.2-101.3-101.3 88.2-88.2C438.4 4.4 449 0 460 0zM44.2 398.5L308.4 134.3 409.7 235.6 145.5 499.8C137.6 507.6 127 512 116 512s-21.6-4.4-29.5-12.2L44.2 457.5C36.4 449.6 32 439 32 428s4.4-21.6 12.2-29.5z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Image Effect
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
